<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/route_radio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:checkedButton="@id/route_drive"
        android:orientation="horizontal"
        android:background="@drawable/bg_bottom_border"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/route_drive"
            android:text="@string/route_plan_drive"
            android:onClick="onDriveClick"
            android:drawableTop="@drawable/route_drive_normal"
            style="@style/route_radio_btn"/>

        <RadioButton
            android:id="@+id/route_bus"
            android:text="@string/route_plan_bus"
            android:onClick="onBusClick"
            android:drawableTop="@drawable/route_bus_normal"
            style="@style/route_radio_btn"/>

        <RadioButton
            android:id="@+id/route_walk"
            android:text="@string/route_plan_walk"
            android:onClick="onWalkClick"
            android:drawableTop="@drawable/route_walk_normal"
            style="@style/route_radio_btn"/>

    </RadioGroup>

    <com.amap.api.maps.MapView
        android:id="@+id/route_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.82"
        app:layout_constraintTop_toBottomOf="@id/route_radio"
        app:layout_constraintBottom_toTopOf="@id/route_more_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/route_more_layout"
        android:background="@drawable/bg_top_border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cost_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/cost_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toBottomOf="@id/info_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:text="@string/route_details"
            android:textColor="@color/blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/route_bus_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.92"
        app:layout_constraintTop_toBottomOf="@id/route_radio"
        app:layout_constraintBottom_toBottomOf="parent">

        <ListView
            android:id="@+id/bus_result_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>